--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <div class="user-grid">
-        <input class="input-rows" type="number" min="1" max="100" placeholder="Number of rows">
-        <input class="input-boxes" type="number" min="1" max="100" placeholder="Number of boxes">
-        <button class="change-grid">Change grid size</button>
+    <div class="options">
+        <div><h2>Grid sizing</h2></div>
+        <div class="user-grid">
+            <input class="input-rows" type="number" min="1" max="100" placeholder="Number of rows">
+            <input class="input-boxes" type="number" min="1" max="100" placeholder="Number of boxes">
+            <button class="change-grid">Change grid size</button>
+        </div>
     </div>
     
     <div class="container">
